# slack-bot

./: pyproject.toml
thor/: main.py  slack.py
